--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ja/tcpdf-bundle",
+    "name": "jonasarts/tcpdf-bundle",
     "description": "A TCPDF Bundle for Symfony",
     "keywords": ["TCPDF"],
-    "homepage": "https://github.com/ja/tcpdf-bundle",
+    "homepage": "https://github.com/jonasarts/tcpdf-bundle",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
