--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    jonasarts.tcpdf.class: ja\TCPDFBundle\Services\TCPDF
+    jonasarts.tcpdf.class: jonasarts\Bundle\TCPDFBundle\Services\TCPDF
 
 services:
     tcpdf:
