Updated bundle for Symfony 3.x

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,5 +3,5 @@ parameters:
 
 services:
     tcpdf:
-        class: %jonasarts.tcpdf.class%
+        class: "%jonasarts.tcpdf.class%"
         arguments: []
