--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,11 @@
             "homepage": "http://www.jonasarts.com"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
-        "php": ">=5.3.3",
-        "symfony/dependency-injection": ">=2.4",
-        "symfony/yaml": ">=2.4"
+        "php": ">=5.5.9",
+        "symfony/framework-bundle": "~2.7|~3.0"
     },
     "autoload": {
-        "psr-0": { "jonasarts\\Bundle\\TCPDFBundle": "" }
-    },
-    "target-dir": "jonasarts/Bundle/TCPDFBundle"
+        "psr-4": { "jonasarts\\Bundle\\TCPDFBundle": "" }
+    }
 }
