--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "symfony/framework-bundle": "~2.7|~3.0"
     },
     "autoload": {
-        "psr-4": { "jonasarts\\Bundle\\TCPDFBundle": "" }
+        "psr-4": { "jonasarts\\Bundle\\TCPDFBundle\\": "" }
     }
 }
