--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "symfony/framework-bundle": "~2.7|~3.0"
+        "php": "^7.1"
     },
     "autoload": {
         "psr-4": { "jonasarts\\Bundle\\TCPDFBundle\\": "" }
