--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "tecnickcom/tcpdf": "^6.2"
+        "php": ">=7.1",
+        "tecnickcom/tcpdf": "^6.3"
     },
     "autoload": {
         "psr-4": { "jonasarts\\Bundle\\TCPDFBundle\\": "" }
